@@ -17,15 +17,18 @@ package org.teavm.junit;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import java.io.BufferedOutputStream;
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -38,18 +41,14 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.WeakHashMap;
 import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
+import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
 import junit.framework.TestCase;
 import org.apache.commons.io.IOUtils;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Test;
 import org.junit.runner.Description;
 import org.junit.runner.Runner;
 import org.junit.runner.manipulation.Filter;
@@ -71,11 +70,13 @@ import org.teavm.dependency.PreciseDependencyAnalyzer;
 import org.teavm.diagnostics.DefaultProblemTextConsumer;
 import org.teavm.diagnostics.Problem;
 import org.teavm.model.AnnotationHolder;
+import org.teavm.model.AnnotationReader;
 import org.teavm.model.AnnotationValue;
 import org.teavm.model.ClassHolder;
 import org.teavm.model.ClassHolderSource;
 import org.teavm.model.MethodDescriptor;
 import org.teavm.model.MethodHolder;
+import org.teavm.model.MethodReader;
 import org.teavm.model.MethodReference;
 import org.teavm.model.PreOptimizingClassHolderSource;
 import org.teavm.model.ReferenceCache;
@@ -93,10 +94,17 @@ public class TeaVMTestRunner extends Runner implements Filterable {
     static final MethodReference JUNIT3_BEFORE = new MethodReference(JUNIT3_BASE_CLASS, "setUp", ValueType.VOID);
     static final MethodReference JUNIT3_AFTER = new MethodReference(JUNIT3_BASE_CLASS, "tearDown", ValueType.VOID);
     static final String JUNIT4_TEST = "org.junit.Test";
+    static final String JUNIT4_IGNORE = "org.junit.Ignore";
+    static final String TESTNG_TEST = "org.testng.annotations.Test";
+    static final String TESTNG_IGNORE = "org.testng.annotations.Ignore";
     static final String JUNIT4_BEFORE = "org.junit.Before";
+    static final String TESTNG_BEFORE = "org.testng.annotations.BeforeMethod";
     static final String JUNIT4_AFTER = "org.junit.After";
+    static final String TESTNG_AFTER = "org.testng.annotations.AfterMethod";
+    static final String TESTNG_PROVIDER = "org.testng.annotations.DataProvider";
     private static final String PATH_PARAM = "teavm.junit.target";
     private static final String JS_RUNNER = "teavm.junit.js.runner";
+    private static final String WASM_RUNNER = "teavm.junit.wasm.runner";
     private static final String THREAD_COUNT = "teavm.junit.threads";
     private static final String JS_ENABLED = "teavm.junit.js";
     static final String JS_DECODE_STACK = "teavm.junit.js.decodeStack";
@@ -128,7 +136,6 @@ public class TeaVMTestRunner extends Runner implements Filterable {
     static class RunnerKindInfo {
         volatile TestRunner runner;
         volatile TestRunStrategy strategy;
-        volatile ScheduledFuture<?> cleanupFuture;
     }
 
     static {
@@ -139,7 +146,6 @@ public class TeaVMTestRunner extends Runner implements Filterable {
             synchronized (TeaVMTestRunner.class) {
                 for (RunnerKindInfo info : runners.values()) {
                     if (info.runner != null) {
-                        info.cleanupFuture = null;
                         info.runner.stop();
                         info.runner.waitForCompletion();
                     }
@@ -164,7 +170,15 @@ public class TeaVMTestRunner extends Runner implements Filterable {
                 case "htmlunit":
                     jsRunStrategy = new HtmlUnitRunStrategy();
                     break;
-                case "":
+                case "browser":
+                    jsRunStrategy = new BrowserRunStrategy(outputDir, "JAVASCRIPT", this::customBrowser);
+                    break;
+                case "browser-chrome":
+                    jsRunStrategy = new BrowserRunStrategy(outputDir, "JAVASCRIPT", this::chromeBrowser);
+                    break;
+                case "browser-firefox":
+                    jsRunStrategy = new BrowserRunStrategy(outputDir, "JAVASCRIPT", this::firefoxBrowser);
+                    break;
                 case "none":
                     jsRunStrategy = null;
                     break;
@@ -178,6 +192,112 @@ public class TeaVMTestRunner extends Runner implements Filterable {
         if (cCommand != null) {
             runners.get(RunKind.C).strategy = new CRunStrategy(cCommand);
         }
+
+        runStrategyName = System.getProperty(WASM_RUNNER);
+        if (runStrategyName != null) {
+            TestRunStrategy wasmRunStrategy;
+            switch (runStrategyName) {
+                case "browser":
+                    wasmRunStrategy = new BrowserRunStrategy(outputDir, "WASM", this::customBrowser);
+                    break;
+                case "browser-chrome":
+                    wasmRunStrategy = new BrowserRunStrategy(outputDir, "WASM", this::chromeBrowser);
+                    break;
+                case "browser-firefox":
+                    wasmRunStrategy = new BrowserRunStrategy(outputDir, "WASM", this::firefoxBrowser);
+                    break;
+                default:
+                    throw new InitializationError("Unknown run strategy: " + runStrategyName);
+            }
+            runners.get(RunKind.WASM).strategy = wasmRunStrategy;
+        }
+    }
+
+    private Process customBrowser(String url) {
+        System.out.println("Open link to run tests: " + url + "?logging=true");
+        return null;
+    }
+
+    private Process chromeBrowser(String url) {
+        return browserTemplate("chrome", url, (profile, params) -> {
+            params.addAll(Arrays.asList(
+                    "google-chrome-stable",
+                    "--headless",
+                    "--disable-gpu",
+                    "--remote-debugging-port=9222",
+                    "--no-first-run",
+                    "--user-data-dir=" + profile
+            ));
+        });
+    }
+
+    private Process firefoxBrowser(String url) {
+        return browserTemplate("firefox", url, (profile, params) -> {
+            params.addAll(Arrays.asList(
+                    "firefox",
+                    "--headless",
+                    "--profile",
+                    profile
+            ));
+        });
+    }
+
+    private Process browserTemplate(String name, String url, BiConsumer<String, List<String>> paramsBuilder) {
+        File temp;
+        try {
+            temp = File.createTempFile("teavm", "teavm");
+            temp.delete();
+            temp.mkdirs();
+            Runtime.getRuntime().addShutdownHook(new Thread(() -> deleteDir(temp)));
+            System.out.println("Running " + name + " with user data dir: " + temp.getAbsolutePath());
+            List<String> params = new ArrayList<>();
+            paramsBuilder.accept(temp.getAbsolutePath(), params);
+            int tabs = Integer.parseInt(System.getProperty(THREAD_COUNT, "1"));
+            for (int i = 0; i < tabs; ++i) {
+                params.add(url);
+            }
+            ProcessBuilder pb = new ProcessBuilder(params.toArray(new String[0]));
+            Process process = pb.start();
+            logStream(process.getInputStream(), name + " stdout");
+            logStream(process.getErrorStream(), name + " stderr");
+            new Thread(() -> {
+                try {
+                    System.out.println(name + " process terminated with code: " + process.waitFor());
+                } catch (InterruptedException e) {
+                    // ignore
+                }
+            });
+            return process;
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private void logStream(InputStream stream, String name) {
+        new Thread(() -> {
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(stream))) {
+                while (true) {
+                    String line = reader.readLine();
+                    if (line == null) {
+                        break;
+                    }
+                    System.out.println(name + ": " + line);
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }).start();
+    }
+
+    private void deleteDir(File dir) {
+        for (File file : dir.listFiles()) {
+            if (file.isDirectory()) {
+                deleteDir(file);
+            } else {
+                file.delete();
+            }
+        }
+        dir.delete();
     }
 
     @Override
@@ -237,11 +357,17 @@ public class TeaVMTestRunner extends Runner implements Filterable {
     }
 
     private boolean isTestMethod(Method method) {
+        if (!Modifier.isPublic(method.getModifiers())) {
+            return false;
+        }
+
         if (TestCase.class.isAssignableFrom(method.getDeclaringClass())) {
             return method.getName().startsWith("test") && method.getName().length() > 4
                     && Character.isUpperCase(method.getName().charAt(4));
+        } else if (getClassAnnotation(method, TESTNG_TEST) != null) {
+            return method.getName().startsWith("test_");
         } else {
-            return method.isAnnotationPresent(Test.class);
+            return getAnnotation(method, JUNIT4_TEST) != null || getAnnotation(method, TESTNG_TEST) != null;
         }
     }
 
@@ -293,7 +419,7 @@ public class TeaVMTestRunner extends Runner implements Filterable {
         Description description = describeChild(child);
         notifier.fireTestStarted(description);
 
-        if (child.isAnnotationPresent(Ignore.class)) {
+        if (isIgnored(child)) {
             notifier.fireTestIgnored(description);
             latch.countDown();
             return;
@@ -302,23 +428,11 @@ public class TeaVMTestRunner extends Runner implements Filterable {
         boolean ran = false;
         boolean success = true;
 
-        ClassHolder classHolder = classSource.get(child.getDeclaringClass().getName());
-        MethodHolder methodHolder = classHolder.getMethod(getDescriptor(child));
-        Set<Class<?>> expectedExceptions = new HashSet<>();
-        for (String exceptionName : getExpectedExceptions(methodHolder)) {
-            try {
-                expectedExceptions.add(Class.forName(exceptionName, false, classLoader));
-            } catch (ClassNotFoundException e) {
-                notifier.fireTestFailure(new Failure(description, e));
-                notifier.fireTestFinished(description);
-                latch.countDown();
-                return;
-            }
-        }
-
         if (!child.isAnnotationPresent(SkipJVM.class) && !testClass.isAnnotationPresent(SkipJVM.class)) {
             ran = true;
-            success = runInJvm(child, notifier, expectedExceptions);
+            ClassHolder classHolder = classSource.get(child.getDeclaringClass().getName());
+            MethodHolder methodHolder = classHolder.getMethod(getDescriptor(child));
+            success = runInJvm(child, notifier, getExpectedExceptions(methodHolder));
         }
 
         if (success && outputDir != null) {
@@ -361,7 +475,7 @@ public class TeaVMTestRunner extends Runner implements Filterable {
         File outputPath = getOutputPathForClass();
         File outputPathForMethod = getOutputPath(child);
         MethodDescriptor descriptor = getDescriptor(child);
-        MethodReference reference = new MethodReference(testClass.getName(), descriptor);
+        MethodReference reference = new MethodReference(child.getDeclaringClass().getName(), descriptor);
 
         File testFilePath = getOutputPath(child);
         testFilePath.mkdirs();
@@ -369,7 +483,8 @@ public class TeaVMTestRunner extends Runner implements Filterable {
         Map<String, String> properties = new HashMap<>();
         for (TeaVMTestConfiguration<JavaScriptTarget> configuration : getJavaScriptConfigurations()) {
             File testPath = getOutputFile(outputPath, "classTest", configuration.getSuffix(), false, ".js");
-            runs.add(createTestRun(testPath, child, RunKind.JAVASCRIPT, reference.toString(), notifier, onSuccess));
+            runs.add(createTestRun(configuration, testPath, child, RunKind.JAVASCRIPT, reference.toString(),
+                    notifier, onSuccess));
             File htmlPath = getOutputFile(outputPathForMethod, "test", configuration.getSuffix(), false, ".html");
             properties.put("SCRIPT", "../" + testPath.getName());
             properties.put("IDENTIFIER", reference.toString());
@@ -382,12 +497,22 @@ public class TeaVMTestRunner extends Runner implements Filterable {
 
         for (TeaVMTestConfiguration<WasmTarget> configuration : getWasmConfigurations()) {
             File testPath = getOutputFile(outputPath, "classTest", configuration.getSuffix(), false, ".wasm");
-            runs.add(createTestRun(testPath, child, RunKind.WASM, reference.toString(), notifier, onSuccess));
+            runs.add(createTestRun(configuration, testPath, child, RunKind.WASM, reference.toString(),
+                    notifier, onSuccess));
+            File htmlPath = getOutputFile(outputPathForMethod, "test-wasm", configuration.getSuffix(), false, ".html");
+            properties.put("SCRIPT", "../" + testPath.getName() + "-runtime.js");
+            properties.put("IDENTIFIER", reference.toString());
+            try {
+                resourceToFile("teavm-run-test-wasm.html", htmlPath, properties);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
         }
 
         for (TeaVMTestConfiguration<CTarget> configuration : getCConfigurations()) {
             File testPath = getOutputFile(outputPath, "classTest", configuration.getSuffix(), true, ".c");
-            runs.add(createTestRun(testPath, child, RunKind.C, reference.toString(), notifier, onSuccess));
+            runs.add(createTestRun(configuration, testPath, child, RunKind.C, reference.toString(),
+                    notifier, onSuccess));
         }
     }
 
@@ -398,7 +523,7 @@ public class TeaVMTestRunner extends Runner implements Filterable {
             Map<String, String> properties = new HashMap<>();
             for (TeaVMTestConfiguration<JavaScriptTarget> configuration : getJavaScriptConfigurations()) {
                 CompileResult compileResult = compileToJs(singleTest(child), "test", configuration, outputPath);
-                TestRun run = prepareRun(child, compileResult, notifier, RunKind.JAVASCRIPT, onSuccess);
+                TestRun run = prepareRun(configuration, child, compileResult, notifier, RunKind.JAVASCRIPT, onSuccess);
                 if (run != null) {
                     runs.add(run);
 
@@ -417,7 +542,7 @@ public class TeaVMTestRunner extends Runner implements Filterable {
 
             for (TeaVMTestConfiguration<CTarget> configuration : getCConfigurations()) {
                 CompileResult compileResult = compileToC(singleTest(child), "test", configuration, outputPath);
-                TestRun run = prepareRun(child, compileResult, notifier, RunKind.C, onSuccess);
+                TestRun run = prepareRun(configuration, child, compileResult, notifier, RunKind.C, onSuccess);
                 if (run != null) {
                     runs.add(run);
                 }
@@ -426,9 +551,21 @@ public class TeaVMTestRunner extends Runner implements Filterable {
             for (TeaVMTestConfiguration<WasmTarget> configuration : getWasmConfigurations()) {
                 CompileResult compileResult = compileToWasm(singleTest(child), "test", configuration,
                         outputPath);
-                TestRun run = prepareRun(child, compileResult, notifier, RunKind.WASM, onSuccess);
+                TestRun run = prepareRun(configuration, child, compileResult, notifier, RunKind.WASM, onSuccess);
                 if (run != null) {
                     runs.add(run);
+
+                    File testPath = getOutputFile(outputPath, "test", configuration.getSuffix(), false,
+                            ".wasm-runtime.js");
+                    File htmlPath = getOutputFile(outputPath, "test", configuration.getSuffix(), false, ".html");
+                    properties.put("SCRIPT", testPath.getName());
+                    properties.put("IDENTIFIER", "");
+
+                    try {
+                        resourceToFile("teavm-run-test-wasm.html", htmlPath, properties);
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
                 }
             }
         } catch (Throwable e) {
@@ -441,119 +578,171 @@ public class TeaVMTestRunner extends Runner implements Filterable {
         onSuccess.accept(true);
     }
 
-    private String[] getExpectedExceptions(MethodHolder method) {
-        AnnotationHolder annot = method.getAnnotations().get(JUNIT4_TEST);
-        if (annot == null) {
-            return new String[0];
-        }
-        AnnotationValue expected = annot.getValue("expected");
-        if (expected == null) {
-            return new String[0];
+    static String[] getExpectedExceptions(MethodReader method) {
+        AnnotationReader annot = method.getAnnotations().get(JUNIT4_TEST);
+        if (annot != null) {
+            AnnotationValue expected = annot.getValue("expected");
+            if (expected == null) {
+                return new String[0];
+            }
+
+            ValueType result = expected.getJavaClass();
+            return new String[] { ((ValueType.Object) result).getClassName() };
         }
 
-        ValueType result = expected.getJavaClass();
-        return new String[] { ((ValueType.Object) result).getClassName() };
+        annot = method.getAnnotations().get(TESTNG_TEST);
+        if (annot != null) {
+            AnnotationValue expected = annot.getValue("expectedExceptions");
+            if (expected == null) {
+                return new String[0];
+            }
+
+            List<AnnotationValue> list = expected.getList();
+            String[] result = new String[list.size()];
+            for (int i = 0; i < list.size(); ++i) {
+                result[i] = ((ValueType.Object) list.get(i).getJavaClass()).getClassName();
+            }
+            return result;
+        }
+
+        return new String[0];
     }
 
-    private boolean runInJvm(Method child, RunNotifier notifier, Set<Class<?>> expectedExceptions) {
-        Description description = describeChild(child);
-        Runner runner;
+    private boolean runInJvm(Method testMethod, RunNotifier notifier, String[] expectedExceptions) {
+        Description description = describeChild(testMethod);
         Object instance;
         try {
-            instance = testClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            instance = testClass.getConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException e) {
+            notifier.fireTestFailure(new Failure(description, e));
+            return false;
+        } catch (InvocationTargetException e) {
+            notifier.fireTestFailure(new Failure(description, e.getTargetException()));
+            return false;
+        }
+
+        Runner runner;
+        try {
+            runner = prepareJvmRunner(instance, testMethod, expectedExceptions);
+        } catch (Throwable e) {
             notifier.fireTestFailure(new Failure(description, e));
             return false;
         }
-        if (!TestCase.class.isAssignableFrom(testClass)) {
-            runner = new JUnit4Runner(instance, child);
+
+        try {
+            runner.run(new Object[0]);
+            return true;
+        } catch (Throwable e) {
+            notifier.fireTestFailure(new Failure(description, e));
+            return false;
+        }
+    }
+
+    private Runner prepareJvmRunner(Object instance, Method testMethod, String[] expectedExceptions) throws Throwable {
+        Runner runner;
+        if (TestCase.class.isAssignableFrom(testClass)) {
+            runner = new JUnit3Runner((TestCase) instance, testMethod);
         } else {
-            runner = new JUnit3Runner(instance);
-            ((TestCase) instance).setName(child.getName());
+            runner = new SimpleMethodRunner(instance, testMethod);
         }
 
+        if (expectedExceptions.length > 0) {
+            runner = new WithExpectedExceptionRunner(runner, expectedExceptions);
+        }
+
+        runner = wrapWithBeforeAndAfter(runner, instance);
+        runner = wrapWithDataProvider(runner, instance, testMethod);
+
+        return runner;
+    }
+
+    private Runner wrapWithBeforeAndAfter(Runner runner, Object instance) {
         List<Class<?>> classes = new ArrayList<>();
         Class<?> cls = instance.getClass();
         while (cls != null) {
             classes.add(cls);
             cls = cls.getSuperclass();
         }
+
+        List<Method> afterMethods = new ArrayList<>();
+        for (Class<?> c : classes) {
+            for (Method method : c.getMethods()) {
+                if (getAnnotation(method, JUNIT4_AFTER) != null || getAnnotation(method, TESTNG_AFTER) != null) {
+                    afterMethods.add(method);
+                }
+            }
+        }
+
+        List<Method> beforeMethods = new ArrayList<>();
         Collections.reverse(classes);
         for (Class<?> c : classes) {
             for (Method method : c.getMethods()) {
-                if (method.isAnnotationPresent(Before.class)) {
-                    try {
-                        method.invoke(instance);
-                    } catch (InvocationTargetException e) {
-                        notifier.fireTestFailure(new Failure(description, e.getTargetException()));
-                    } catch (IllegalAccessException e) {
-                        notifier.fireTestFailure(new Failure(description, e));
-                    }
+                if (getAnnotation(method, JUNIT4_BEFORE) != null || getAnnotation(method, TESTNG_BEFORE) != null) {
+                    beforeMethods.add(method);
                 }
             }
         }
 
+        if (beforeMethods.isEmpty() && afterMethods.isEmpty()) {
+            return runner;
+        }
+
+        return new WithBeforeAndAfterRunner(runner, instance, beforeMethods.toArray(new Method[0]),
+                afterMethods.toArray(new Method[0]));
+    }
+
+    private Runner wrapWithDataProvider(Runner runner, Object instance, Method testMethod) throws Throwable {
+        AnnotationHolder annot = getAnnotation(testMethod, TESTNG_TEST);
+        if (annot == null) {
+            return runner;
+        }
+
+        AnnotationValue dataProviderValue = annot.getValue("dataProvider");
+        if (dataProviderValue == null) {
+            return runner;
+        }
+        String providerName = dataProviderValue.getString();
+        if (providerName.isEmpty()) {
+            return runner;
+        }
+
+        Method provider = null;
+        for (Method method : testMethod.getDeclaringClass().getDeclaredMethods()) {
+            AnnotationHolder providerAnnot = getAnnotation(method, TESTNG_PROVIDER);
+            if (providerAnnot != null && providerAnnot.getValue("name").getString().equals(providerName)) {
+                provider = method;
+                break;
+            }
+        }
+
+        Object data;
         try {
-            boolean expectedCaught = false;
-            try {
-                runner.run();
-            } catch (Throwable e) {
-                boolean wasExpected = false;
-                for (Class<?> expected : expectedExceptions) {
-                    if (expected.isInstance(e)) {
-                        expectedCaught = true;
-                        wasExpected = true;
-                    }
-                }
-                if (!wasExpected) {
-                    notifier.fireTestFailure(new Failure(description, e));
-                    return false;
-                }
-                return false;
-            }
-
-            if (!expectedCaught && !expectedExceptions.isEmpty()) {
-                notifier.fireTestAssumptionFailed(new Failure(description,
-                        new AssertionError("Expected exception was not thrown")));
-                return false;
-            }
-
-            return true;
-        } finally {
-            Collections.reverse(classes);
-            for (Class<?> c : classes) {
-                for (Method method : c.getMethods()) {
-                    if (method.isAnnotationPresent(After.class)) {
-                        try {
-                            method.invoke(instance);
-                        } catch (InvocationTargetException e) {
-                            notifier.fireTestFailure(new Failure(description, e.getTargetException()));
-                        } catch (IllegalAccessException e) {
-                            notifier.fireTestFailure(new Failure(description, e));
-                        }
-                    }
-                }
-            }
+            provider.setAccessible(true);
+            data = provider.invoke(instance);
+        } catch (InvocationTargetException e) {
+            throw e.getTargetException();
         }
+
+        return new WithDataProviderRunner(runner, data, testMethod.getParameterTypes());
     }
 
     interface Runner {
-        void run() throws Throwable;
+        void run(Object[] arguments) throws Throwable;
     }
 
-    static class JUnit4Runner implements Runner {
+    static class SimpleMethodRunner implements Runner {
         Object instance;
-        Method child;
+        Method testMethod;
 
-        JUnit4Runner(Object instance, Method child) {
+        SimpleMethodRunner(Object instance, Method testMethod) {
             this.instance = instance;
-            this.child = child;
+            this.testMethod = testMethod;
         }
 
         @Override
-        public void run() throws Throwable {
+        public void run(Object[] arguments) throws Throwable {
             try {
-                child.invoke(instance);
+                testMethod.invoke(instance, arguments);
             } catch (InvocationTargetException e) {
                 throw e.getTargetException();
             }
@@ -561,20 +750,158 @@ public class TeaVMTestRunner extends Runner implements Filterable {
     }
 
     static class JUnit3Runner implements Runner {
-        Object instance;
+        TestCase instance;
+        Method testMethod;
 
-        JUnit3Runner(Object instance) {
+        JUnit3Runner(TestCase instance, Method testMethod) {
             this.instance = instance;
+            this.testMethod = testMethod;
         }
 
         @Override
-        public void run() throws Throwable {
-            ((TestCase) instance).runBare();
+        public void run(Object[] arguments) throws Throwable {
+            instance.setName(testMethod.getName());
+            instance.runBare();
         }
     }
 
-    private TestRun prepareRun(Method child, CompileResult result, RunNotifier notifier, RunKind kind,
-            Consumer<Boolean> onComplete) {
+    static class WithDataProviderRunner implements Runner {
+        Runner underlyingRunner;
+        Object data;
+        Class<?>[] types;
+
+        WithDataProviderRunner(Runner underlyingRunner, Object data, Class<?>[] types) {
+            this.underlyingRunner = underlyingRunner;
+            this.data = data;
+            this.types = types;
+        }
+
+        @Override
+        public void run(Object[] arguments) throws Throwable {
+            if (arguments.length > 0) {
+                throw new IllegalArgumentException("Expected 0 arguments");
+            }
+            if (data instanceof Iterator) {
+                runWithIteratorData((Iterator<?>) data);
+            } else {
+                runWithArrayData((Object[][]) data);
+            }
+        }
+
+        private void runWithArrayData(Object[][] data) throws Throwable {
+            for (int i = 0; i < data.length; ++i) {
+                runWithDataRow(data[i]);
+            }
+        }
+
+        private void runWithIteratorData(Iterator<?> data) throws Throwable {
+            while (data.hasNext()) {
+                runWithDataRow((Object[]) data.next());
+            }
+        }
+
+        private void runWithDataRow(Object[] dataRow) throws Throwable {
+            Object[] args = dataRow.clone();
+            for (int j = 0; j < args.length; ++j) {
+                args[j] = convert(args[j], types[j]);
+            }
+            underlyingRunner.run(args);
+        }
+
+        private Object convert(Object value, Class<?> type) {
+            if (type == byte.class) {
+                value = ((Number) value).byteValue();
+            } else if (type == short.class) {
+                value = ((Number) value).shortValue();
+            } else if (type == int.class) {
+                value = ((Number) value).intValue();
+            } else if (type == long.class) {
+                value = ((Number) value).longValue();
+            } else if (type == float.class) {
+                value = ((Number) value).floatValue();
+            } else if (type == double.class) {
+                value = ((Number) value).doubleValue();
+            }
+            return value;
+        }
+    }
+
+    static class WithExpectedExceptionRunner implements Runner {
+        private Runner underlyingRunner;
+        private String[] expectedExceptions;
+
+        WithExpectedExceptionRunner(Runner underlyingRunner, String[] expectedExceptions) {
+            this.underlyingRunner = underlyingRunner;
+            this.expectedExceptions = expectedExceptions;
+        }
+
+        @Override
+        public void run(Object[] arguments) throws Throwable {
+            boolean caught = false;
+            try {
+                underlyingRunner.run(arguments);
+            } catch (Exception e) {
+                for (String expected : expectedExceptions) {
+                    if (isSubtype(e.getClass(), expected)) {
+                        caught = true;
+                        break;
+                    }
+                }
+                if (!caught) {
+                    throw e;
+                }
+            }
+            if (!caught) {
+                throw new AssertionError("Expected exception not thrown");
+            }
+        }
+
+        private boolean isSubtype(Class<?> cls, String superType) {
+            while (cls != Throwable.class) {
+                if (cls.getName().equals(superType)) {
+                    return true;
+                }
+                cls = cls.getSuperclass();
+            }
+            return false;
+        }
+    }
+
+    static class WithBeforeAndAfterRunner implements Runner {
+        private Runner underlyingRunner;
+        private Object instance;
+        private Method[] beforeMethods;
+        private Method[] afterMethods;
+
+        WithBeforeAndAfterRunner(Runner underlyingRunner, Object instance, Method[] beforeMethods,
+                Method[] afterMethods) {
+            this.underlyingRunner = underlyingRunner;
+            this.instance = instance;
+            this.beforeMethods = beforeMethods;
+            this.afterMethods = afterMethods;
+        }
+
+        @Override
+        public void run(Object[] arguments) throws Throwable {
+            for (Method method : beforeMethods) {
+                try {
+                    method.invoke(instance);
+                } catch (InvocationTargetException e) {
+                    throw e.getTargetException();
+                }
+            }
+            try {
+                underlyingRunner.run(arguments);
+            } finally {
+                for (Method method : afterMethods) {
+                    method.invoke(instance);
+                }
+            }
+        }
+    }
+
+    private TestRun prepareRun(TeaVMTestConfiguration<?> configuration, Method child, CompileResult result,
+            RunNotifier notifier, RunKind kind, Consumer<Boolean> onComplete) {
         Description description = describeChild(child);
 
         if (!result.success) {
@@ -584,11 +911,11 @@ public class TeaVMTestRunner extends Runner implements Filterable {
             return null;
         }
 
-        return createTestRun(result.file, child, kind, null, notifier, onComplete);
+        return createTestRun(configuration, result.file, child, kind, null, notifier, onComplete);
     }
 
-    private TestRun createTestRun(File file, Method child, RunKind kind, String argument, RunNotifier notifier,
-            Consumer<Boolean> onComplete) {
+    private TestRun createTestRun(TeaVMTestConfiguration<?> configuration, File file, Method child, RunKind kind,
+            String argument, RunNotifier notifier, Consumer<Boolean> onComplete) {
         Description description = describeChild(child);
 
         TestRunCallback callback = new TestRunCallback() {
@@ -604,8 +931,16 @@ public class TeaVMTestRunner extends Runner implements Filterable {
             }
         };
 
-        return new TestRun(file.getParentFile(), child, description, file.getName(), kind,
-                argument, callback);
+        return new TestRun(generateName(child.getName(), configuration), file.getParentFile(), child, description,
+                file.getName(), kind, argument, callback);
+    }
+
+    private String generateName(String baseName, TeaVMTestConfiguration<?> configuration) {
+        String suffix = configuration.getSuffix();
+        if (!suffix.isEmpty()) {
+            baseName = baseName + " (" + suffix + ")";
+        }
+        return baseName;
     }
 
     private Failure createFailure(Description description, CompileResult result) {
@@ -637,19 +972,13 @@ public class TeaVMTestRunner extends Runner implements Filterable {
             }
             info.runner.run(run);
 
-            if (info.cleanupFuture != null) {
-                info.cleanupFuture.cancel(false);
-                info.cleanupFuture = null;
-            }
             RunKind kind = run.getKind();
-            info.cleanupFuture = executor.schedule(() -> cleanupRunner(kind), stopTimeout, TimeUnit.MILLISECONDS);
         }
     }
 
     private static void cleanupRunner(RunKind kind) {
         synchronized (TeaVMTestRunner.class) {
             RunnerKindInfo info = runners.get(kind);
-            info.cleanupFuture = null;
             info.runner.stop();
             info.runner = null;
         }
@@ -707,7 +1036,7 @@ public class TeaVMTestRunner extends Runner implements Filterable {
                 }
             };
         }
-        return compile(configuration, targetSupplier, TestEntryPoint.class.getName(), path, ".js",
+        return compile(configuration, targetSupplier, TestJsEntryPoint.class.getName(), path, ".js",
                 postBuild, false, additionalProcessing, baseName);
     }
 
@@ -756,6 +1085,9 @@ public class TeaVMTestRunner extends Runner implements Filterable {
             vm.setProperties(properties);
             List<MethodReference> methodReferences = new ArrayList<>();
             for (Method method : methods) {
+                if (isIgnored(method)) {
+                    continue;
+                }
                 ClassHolder classHolder = classSource.get(method.getDeclaringClass().getName());
                 MethodHolder methodHolder = classHolder.getMethod(getDescriptor(method));
                 methodReferences.add(methodHolder.getReference());
@@ -763,6 +1095,35 @@ public class TeaVMTestRunner extends Runner implements Filterable {
             new TestEntryPointTransformerForWholeClass(methodReferences, testClass.getName()).install(vm);
         };
     }
+
+    private boolean isIgnored(Method method) {
+        return getAnnotation(method, JUNIT4_IGNORE) != null
+                || getAnnotation(method, TESTNG_IGNORE) != null
+                || getClassAnnotation(method, JUNIT4_IGNORE) != null
+                || getClassAnnotation(method, TESTNG_IGNORE) != null;
+    }
+
+    private AnnotationHolder getAnnotation(Method method, String name) {
+        ClassHolder cls = classSource.get(method.getDeclaringClass().getName());
+        if (cls == null) {
+            return null;
+        }
+        MethodDescriptor descriptor = getDescriptor(method);
+        MethodHolder methodHolder = cls.getMethod(descriptor);
+        if (methodHolder == null) {
+            return null;
+        }
+        return methodHolder.getAnnotations().get(name);
+    }
+
+    private AnnotationHolder getClassAnnotation(Method method, String name) {
+        ClassHolder cls = classSource.get(method.getDeclaringClass().getName());
+        if (cls == null) {
+            return null;
+        }
+        return cls.getAnnotations().get(name);
+    }
+
 
     private <T extends TeaVMTarget> CompileResult compile(TeaVMTestConfiguration<T> configuration,
             Supplier<T> targetSupplier, String entryPoint, File path, String extension,
@@ -998,7 +1359,7 @@ public class TeaVMTestRunner extends Runner implements Filterable {
                 Writer writer = new OutputStreamWriter(bufferedOutput)) {
             writer.write("[\n");
             boolean first = true;
-            for (TestRun run : runsInCurrentClass) {
+            for (TestRun run : runsInCurrentClass.toArray(new TestRun[0])) {
                 if (!first) {
                     writer.write(",\n");
                 }
@@ -1016,6 +1377,9 @@ public class TeaVMTestRunner extends Runner implements Filterable {
                     writer.write("    \"argument\": ");
                     writeJsonString(writer, run.getArgument());
                 }
+                writer.write(",\n");
+                writer.write("    \"name\": ");
+                writeJsonString(writer, run.getName());
                 writer.write("\n  }");
             }
             writer.write("\n]");
